2010-09-10  Krzysztof Marecki  <>

	* MonoDevelop.NHibernate.csproj:
	* MonoDevelop.NHibernate.addin.xml: 

2010-09-06  Krzysztof Marecki  <freefirma@gmail.com>

	* after-build:
	* MonoDevelop.NHibernate.csproj: 
