@@ -1,18 +1,0 @@
-﻿<Properties>
-  <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="MonoDevelop.NHibernate.addin.xml">
-    <Files>
-      <File FileName="MonoDevelop.NHibernate.addin.xml" Line="70" Column="43" />
-      <File FileName="Commands.cs" Line="1" Column="1" />
-      <File FileName="MonoDevelop.NHibernate.NodeBuilders/ProjectFolderNodeBuilderExtension.cs" Line="1" Column="1" />
-      <File FileName="MonoDevelop.NHibernate.NodeBuilders/ProjectFolderCommandHandler.cs" Line="1" Column="1" />
-      <File FileName="MonoDevelop.NHibernate.Dialogs/NewHbmFileDialog.cs" Line="1" Column="1" />
-      <File FileName="templates/ClassMapping.xft.xml" Line="1" Column="1" />
-      <File FileName="after-build" Line="1" Column="1" />
-    </Files>
-  </MonoDevelop.Ide.Workbench>
-  <MonoDevelop.Ide.DebuggingService.Breakpoints>
-    <BreakpointStore />
-  </MonoDevelop.Ide.DebuggingService.Breakpoints>
-  <MonoDevelop.Ide.DebuggingService.PinnedWatches />
-</Properties>
